--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="main">
   <div class="container">
     <h1>Testin' out this stuff</h1>
-    <p>Trying to make Rails apppss</p>
+    <p>susanne can u see this test?</p>
 
     <div class="player">
       <h2>Player view</h2>
