--- a/app/views/pages/player.html.erb
+++ b/app/views/pages/player.html.erb
@@ -1,6 +1,6 @@
 <div class="main">
   <div class="container">
     <h1>The player</h1>
-    <a href="welcome">Home</a>
+    <a href="">Home</a>
   </div>
 </div>
