--- a/app/views/pages/player.html.erb
+++ b/app/views/pages/player.html.erb
@@ -2,5 +2,9 @@
   <div class="container">
     <h1>The player</h1>
     <a href="">Home</a>
+
+    <div id="main">
+      <h2>Tutorial      </h2>
+    </div>
   </div>
 </div>
