--- a/app/views/pages/player.html.erb
+++ b/app/views/pages/player.html.erb
@@ -5,6 +5,8 @@
 
     <div id="main">
       <h2>Tutorial      </h2>
+      <p>ASDADasdad asdadasdasd asdald asd asdasd</p>
+      <p>asdasdlkadøl adak døalskdøal kadkasødlka</p>
     </div>
   </div>
 </div>
