--- a/app/views/pages/player.html.erb
+++ b/app/views/pages/player.html.erb
@@ -7,6 +7,8 @@
       <h2>Tutorial      </h2>
       <p>ASDADasdad asdadasdasd asdald asd asdasd</p>
       <p>asdasdlkadøl adak døalskdøal kadkasødlka</p>
+      <img src="http://imaging.nikon.com/lineup/lens/zoom/normalzoom/af-s_dx_18-140mmf_35-56g_ed_vr/img/sample/sample1_l.jpg" alt="Birdie" style=%"width:304px;height:228px;">
+
     </div>
   </div>
 </div>
