--- a/app/views/pages/player.html.erb
+++ b/app/views/pages/player.html.erb
@@ -8,7 +8,7 @@
       <p>ASDADasdad asdadasdasd asdald asd asdasd</p>
       <p>asdasdlkadøl adak døalskdøal kadkasødlka</p>
       <img src="http://imaging.nikon.com/lineup/lens/zoom/normalzoom/af-s_dx_18-140mmf_35-56g_ed_vr/img/sample/sample1_l.jpg" alt="Birdie" style=%"width:304px;height:228px;">
-
+      <p>Walk up the stairs, take a left turn and look between Kiwi and a restaurant called “Punjab Tandoori”. You want to cross the streets between these two buildings and keep walking along the street called Motzfeldts gate around 3 blocks till you find a large Mosque (which you’ll walk past) and a crossing street called “Urtegata”. This is my street. Take a right turn up on the pavement where cars are not allowed and walk till you find a steel gate. </p>
     </div>
   </div>
 </div>
