--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -16,14 +16,20 @@ body {
   background-image: url('http://s3.a
 mazonaws.com/codecademy-content/cour
 ses/learn-rails/img/bg-static.jpg');
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   background-size: cover;
   font-family: 'Source Sans Pro', sans-serif;
 }
 
 .container {
   margin: 0 auto;
-  width: 960px;
+  width: 80%;
+}
+div.main {
+  transition: all 0.5s ease;
+  float:left;
+  width: 60%;
+  background-color: black;
 }
 
 /* Main */
