changed logic of css names

--- a/app/views/pages/player.html.erb
+++ b/app/views/pages/player.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1>The player</h1>
     <a href="">Home</a>
-    <div id="main">
+    <div id="content">
       <h2>Tutorial      </h2>
       <p>ASDADasdad asdadasdasd asdald asd asdasd</p>
       <p>asdasdlkadøl adak døalskdøal kadkasødlka</p>
