--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -28,7 +28,7 @@ ses/learn-rails/img/bg-static.jpg');
   width: 80%;
 }
 
-div.main {
+div.content {
   margin: 0px; padding: 0px; border: 0px;
   float:left;
   width: 60%;
