--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -22,6 +22,7 @@ body {
   // https://s-media-cache-ak0.pinimg.com/736x/bf/30/bd/bf30bd0873a0e514c454e6c11f124596.jpg
   //background-image: url('../images/airbnbbg.jpg');
   background-repeat: repeat-y;
+  background-position: right;
   //background-size: cover;
   background-size: 100%;
   font-family: 'Source Sans Pro', sans-serif;
@@ -29,7 +30,7 @@ body {
 
 .container {
   margin: 0px; padding: 0px; border: 0px;
-  width: 90%;
+  width: 100%;
 }
 
 div#content {
