--- a/app/views/pages/player.html.erb
+++ b/app/views/pages/player.html.erb
@@ -3,7 +3,7 @@
 
     <div id="content">
       <h1>A brief introduction to my apartment</h1>
-      <img src="http://imaging.nikon.com/lineup/lens/zoom/normalzoom/af-s_dx_18-140mmf_35-56g_ed_vr/img/sample/sample1_l.jpg" alt="Birdie" style=%"width:304px;height:228px;">
+      <img src="https://a2.muscache.com/im/pictures/0495beeb-64e2-4b1b-bfcb-64a70cce0059.jpg" alt="livingroom" style=%"width:304px;height:228px;">
 
       <div id="toc">
         <h3>Table of Contents</h3>
