last picture update for now

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -75,10 +75,11 @@
         <img src="https://drive.google.com/uc?export=view&id=0B9jrz1uzl_eNbUx6TFpjTnJiTm8" alt="Directions 3" >
         <p>Cross the square through this path
         </p>
-
+        <img src="https://drive.google.com/uc?export=view&id=0B9jrz1uzl_eNVnUxNjVlUE95djQ" alt="Directions 4" >
         <p> and the building should be in front of you with a steel gate.
         </p>
         <h3>Straight to my place</h3>
+        <p>Skip this part if you're already there</p>
         <p>Walk up the stairs, take a left turn and look between Kiwi and a restaurant called “Punjab Tandoori”. You want to cross the streets between
           these two buildings and keep walking along the street called Motzfeldts gate around 3 blocks till you find a large Mosque (which you’ll walk past)
           and a crossing street called “Urtegata”. This is my street. Take a right turn up on the pavement where cars are not allowed and walk till you find
@@ -91,8 +92,6 @@
         <h2>Safety</h2>
         <p>The Fire extinguisher is located in the closet right next to the entrance *insert pic*. The building also has a centralized fire alarm which
           never really triggers unless something severe happens, so it probably won’t. It’s important that you use the fan</p>
-        <h2>The mediacenter</h2>
-        <p>To do</p>
       </div>
     </div>
   </div>
