--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -13,11 +13,11 @@ html, body {
 }
 
 body {
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   //background-image: url('http://s3.a
-//mazonaws.com/codecademy-content/cour
-//ses/learn-rails/img/bg-static.jpg');
+  //mazonaws.com/codecademy-content/cour
+  //ses/learn-rails/img/bg-static.jpg');
   background-image: url('https://s-media-cache-ak0.pinimg.com/736x/bf/30/bd/bf30bd0873a0e514c454e6c11f124596.jpg');
   // https://s-media-cache-ak0.pinimg.com/736x/bf/30/bd/bf30bd0873a0e514c454e6c11f124596.jpg
   //background-image: url('../images/airbnbbg.jpg');
@@ -26,6 +26,11 @@ body {
   //background-size: cover;
   background-size: 100%;
   font-family: 'Source Sans Pro', sans-serif;
+}
+
+li {
+  //list-style-type: none;
+  list-style-type: upper-roman;
 }
 
 img {
