--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -95,7 +95,20 @@
           When turning the key, try to hold it a little bit downward in case you’re struggling to open it.</p>
         <h2>Safety</h2>
         <p>The Fire extinguisher is located in the closet right next to the entrance *insert pic*. The building also has a centralized fire alarm which
-          never really triggers unless something severe happens, so it probably won’t. It’s important that you use the fan</p>
+          never really triggers unless something severe happens, so it probably won’t. It’s important that you use the fan in the kitchen to not trigger any fire alarms</p>
+	<h2>TV / HiFi system</h2>
+	<p>These are your options: </p>
+	<ul>
+	<li> Netflix</li>
+	<li> HBO Nordic</li>
+	<li> Spotify</li>
+	<li> Netflix</li>
+	</ul>
+	<p>When watching TV pick the black remote and click «on» to turn the amplifier on. Then click the small button that says «tuner» (it should already be on tuner). </p>
+
+
+
+
       </div>
     </div>
   </div>
