added a lil more to guide

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -97,15 +97,25 @@
         <p>The Fire extinguisher is located in the closet right next to the entrance *insert pic*. The building also has a centralized fire alarm which
           never really triggers unless something severe happens, so it probably won’t. It’s important that you use the fan in the kitchen to not trigger any fire alarms</p>
 	<h2>TV / HiFi system</h2>
-	<p>These are your options: </p>
+	<p>These are some of your entertainment options: </p>
 	<ul>
 	<li> Netflix</li>
 	<li> HBO Nordic</li>
 	<li> Spotify</li>
 	<li> Netflix</li>
+	<li>Twitch TV</li>
+	<li>Youtube</li>
+	<li>Any app you can think of that has Chromecast TV / Audio support</li>
 	</ul>
 	<p>When watching TV pick the black remote and click «on» to turn the amplifier on. Then click the small button that says «tuner» (it should already be on tuner). </p>
-
+	<p>Now you should be set to use either Apple TV, Smart TV apps or Chromecast apps using your phone. If you have no idea what I’m talking to I suggest you to pick up the Apple TV remote and 
+	use that one which has Netflix and HBO.</p>
+	<h2>Music</h2>
+	<p>You can listen to music using the same settings on the amplifier as I listed earlier, while using Spotify Chromecast. My Chromecast stations are: Vdogg Chromecast. If connecting to this one 	make sure the TV is on. Also make sure you select the channel «tuner» on the Amplifier. In order to do this use your phone, computer or tablet and make sure your devices are connected to WIFI</p>
+	<h2>Music only</h2>
+	<p>You can also play music with the TV off. Turn the Amplifier on and select the channel «line». Use Chromecast Audio on your smartphone with Spotify to connect or any other app that can connect 	to Chromecast Audio.</p>
+	<h2>Smart TV apps</h2>	
+	<p>Click the colorful button on the small grey TV Samsung remote to get access to the Smart TV apps. They tend to be a little bit buggy, so I’d recommend you to use Apple TV.</p>
 
 
 
