--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -18,7 +18,7 @@ body {
   //background-image: url('http://s3.a
   //mazonaws.com/codecademy-content/cour
   //ses/learn-rails/img/bg-static.jpg');
-  background-image: url('https://s-media-cache-ak0.pinimg.com/736x/bf/30/bd/bf30bd0873a0e514c454e6c11f124596.jpg');
+ // background-image: url('https://s-media-cache-ak0.pinimg.com/736x/bf/30/bd/bf30bd0873a0e514c454e6c11f124596.jpg');
   // https://s-media-cache-ak0.pinimg.com/736x/bf/30/bd/bf30bd0873a0e514c454e6c11f124596.jpg
   //background-image: url('../images/airbnbbg.jpg');
   background-repeat: repeat-y;
