added checkout routine

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,6 +48,7 @@
 
       <div id="contents">
         <h2>Wifi name: Politiets sikkerhetstjeneste Pasword: Jungelboken </h2>
+<h2>Checkout: when you're checking out leave the keys in my mailbox marked with Vegard Nyeng and Pål solvang</h2>
         <h2>Directions</h2>
         <p><strong>Tldr;</strong>If you’re good with Google Maps and don’t like following guides, skip to the “getting in to my apartment” part of
           this tutorial and use this as your basis: <strong>Urtegata 24 a 0187 Oslo, 2nd floor, door marked with “Vegard Wright”.</strong> </p>
