--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -65,14 +65,14 @@
           the different shops inside the subway station.</p>
         <h3>If you are picking up keys</h3>
         <p>You’re going to this corner store located at this address: Tøyengata 2, 0190 Oslo. When exiting up the stairs walk straight through the square / market
-          covered with various benches and trees till you see this</p>
+         covered with various benches and trees till you see this</p>
         <img src="https://drive.google.com/uc?export=view&id=0B9jrz1uzl_eNU2xWbVY0VGM2R2c" alt="Directions 1" >
 
         <p>Head into that street you see there marked with yellow and walk 1 block down the street called “Tøyenbekken” and then head to the right along
           “Nordbygata”. At the end of that street you’ll see this store:</p>
         <img src="https://drive.google.com/uc?export=view&id=0B9jrz1uzl_eNallFem5nYmtnU1E" alt="Directions 2" >
 
-        <p>Go inside, tell them there’s an envelope with *your name* on it and they’ll hand you the envelope. Leave the store, go back the same
+        <p>Go inside, tell them there’s a mini yellow purse/bag with your name on a note inside of it. Ask for it and they will hand it to you. Leave the store, go back the same
           path came from till you find this area which the arrow points. Head into that street.
         </p>
         <img src="https://drive.google.com/uc?export=view&id=0B9jrz1uzl_eNZFZ3UHB1bVlqYlE" alt="Directions 3" >
