minor update to not confuse guestsgrep -r windows

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -50,7 +50,7 @@
         <h2>Wifi name: Politiets sikkerhetstjeneste Pasword: Jungelboken </h2>
 <h2>Checkout: when you're checking out leave the keys in my mailbox marked with Vegard Nyeng and Pål solvang</h2>
         <h2>Directions</h2>
-        <p><strong>Tldr;</strong>If you’re good with Google Maps and don’t like following guides, skip to the “getting in to my apartment” part of
+        <p><strong>Tldr;</strong>If you’re good with Google Maps, NOT picking up keys and don’t like following guides, skip to the “getting in to my apartment” part of
           this tutorial and use this as your basis: <strong>Urtegata 24 a 0187 Oslo, 2nd floor, door marked with “Vegard Wright”.</strong> </p>
         <h2>From the airport</h2>
         <p>Follow directions to get to the trains, just head to the right as soon as you exit luggage drop offs. Here you got two options:
